# Drone-with-ROS

./: README.md
ROS_basic_learning_ws/: README.md
ROS_basic_learning_ws/devel/: .catkin  setup.sh
ROS_basic_learning_ws/devel/include/package2/: Person.h  testRequest.h
ROS_basic_learning_ws/devel/lib/pkgconfig/: package2.pc  package3.pc  package4.pc  package7.pc
ROS_basic_learning_ws/src/package1/: CMakeLists.txt
ROS_basic_learning_ws/src/package2/: CMakeLists.txt  package.xml
ROS_basic_learning_ws/src/package2/launch/: test.launch
ROS_basic_learning_ws/src/package2/scripts/: get_param_p.py  recive.py  server.py
ROS_basic_learning_ws/src/package3/scripts/: control_circle_p.py  hehe.py
ROS_basic_learning_ws/src/package4/launch/: test.launch
ROS_basic_learning_ws/src/package4/scripts/: frames.gv  static_sub_tf_p.py
ROS_basic_learning_ws/src/package5/: package.xml
ROS_basic_learning_ws/src/package6/: CMakeLists.txt
XTDrone_catkin_ws/devel/: .rosinstall
XTDrone_catkin_ws/scripts/: FrameTrajectory_KITTI_Format.txt  FrameTrajectory_TUM_Format.txt
XTDrone_ws/: README.md
XTDrone_ws/devel/: .catkin
kun_catkin_ws/: README.md
kun_catkin_ws/src/offboard_pos_ctl/: CMakeLists.txt
kun_catkin_ws/src/offboard_pos_ctl/launch/: offboard_pos_ctl.launch
kun_ws/: README.md
kun_ws/src/offboard_pos_ctl/: package.xml
test_ws/devel/: .rosinstall
test_ws/src/package3/: CMakeLists.txt
test_ws/src/package4/: CMakeLists.txt
test_ws/src/package5/: CMakeLists.txt
test_ws/src/package6/: package.xml
test_ws/src/package7/: CMakeLists.txt
(+125 files in other folders)
